# KTomGirl

./: Rakefile
docs/: Doxyfile  TODO.txt
libtomgirl/: CMakeLists.txt  Makefile  README  datetime.cpp  datetime.hpp  gnote.cpp  gnote.hpp  ktglib.cpp  ktglib.hpp  note.cpp  note.hpp  notebuffer.hpp  notemanager.cpp  notemanager.hpp  sharp.cpp  sharp.hpp  string.cpp  string.hpp  tag.cpp  tagmanager.cpp  tagmanager.hpp
src/: AUTHORS  CMakeLists.txt  DEPENDS  Makefile  README  TODO  actionmanager.hpp  application.cpp  application.h  config.h  datetime.cpp  datetime.hpp  dependencies  gnote.cpp  gnote.hpp  keybinder.hpp  knote.cpp  knote.h  knoteedit.cpp  knoteedit.h  knotesapp.cpp  knotesapp.h  ktgconfig.cpp  ktgconfig.h  ktgconfig.kcfg  ktgconfig.kcfgc  ktgconfigskel.kcfg  ktgconfigskel.kcfgc  ktgdateitem.cpp  ktgdateitem.h  ktgitem.cpp  ktgitem.h  ktglib.cpp  ktglib.hpp  ktgmenu.cpp  ktgmenu.h  ktgstring.cpp  ktgstring.hpp  ktgsystray.cpp  ktgsystray.h  (+32 more)
src/debian/: README.Debian  README.source  changelog  control  control.quantal  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  ktomgirl.cron.d.ex  ktomgirl.default.ex  ktomgirl.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
src/sharp/: string.hpp
src/test/: Makefile  searchwindow.cpp  searchwindow.py  searchwindow.ui  test.py
src/ui/: knotesappui.rc  knotesui.rc  ktomgirl.qrc  newnotebookdialog.ui  notebooksdialog.ui  notesdialog.ui  searchbar.ui  searchwindow.ui
test/: CMakeLists.txt  Makefile  TODO.txt  junk.cpp  knote.cpp  knote.h  ktomgirl.qrc  ktomgirlui.rc  main.cpp  notebooksdialog.cpp  notebooksdialog.ui  notedialog.cpp  notedialog.h  notedialog.ui  notesdialog.cpp  notesdialog.ui  searchwindow.cpp  searchwindow.h  searchwindow.ui  ui_notebooksdialog.h  ui_notesdialog.h  ui_searchwindow.h
test/datetime/: CMakeLists.txt  main.cpp
test/find/: CMakeLists.txt  main.cpp
test/gnote/: main.cpp
test/notemanager/: CMakeLists.txt  Makefile  ktgresources.qrc  main.cpp  mainwindow.cpp  notebooksdialog.ui  notesdialog.ui  searchwindow.cpp
test/systray/: CMakeLists.txt  TODO.txt  ktgsystray.cpp  ktgsystray.h  main.cpp  stub.cpp  stub.h
test/xmlwindow/: CMakeLists.txt  Makefile  knote.h  ktomgirlui.rc  main.cpp  searchwindow.h
